<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/description"
        android:textSize="16sp"
        android:text="@string/random_description_here"
        android:layout_below="@id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>