<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/income"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingHorizontal="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/select_category"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_spinner" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minLines="3"
            android:paddingHorizontal="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_button"
        android:padding="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</RelativeLayout>