<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/staticString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/summary"
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/staticString2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/staticString"
                    android:layout_marginStart="120dp"
                    android:layout_marginBottom="8dp"
                    android:text="Income:\nExpense:\nBalance:"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/staticString2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorGreen"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_add" />

                <TextView
                    android:id="@+id/Expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Income"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorRed"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/Balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Expense"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_equal" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:elevation="5dp"
            android:onClick="showRecords"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/record">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_records" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:text="@string/all_records"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView3"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/addincome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="49"
                android:background="@drawable/green_button"
                android:onClick="addIncome"
                android:text="@string/add_income"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addexpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="49"
                android:background="@drawable/red_button"
                android:onClick="addExpense"
                android:text="@string/add_expense"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>